dataset1235/2025-2/1955397009/users/1340687653/executions/1686127217_2416501300.log
== SUBMISSION (2025-08-13 02:38:37)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 02:38:35)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 02:35:15)
-- CODE: 
print("****")
print("***")
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 02:35:17)
-- CODE: 
print("****")
print("***")
print("*")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 02:36:30)
-- CODE: 
print(****)
print(***)
print(*)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 1
    print(****)
            ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 1
    print(****)
            ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
